fix formatting bug on mobile

--- a/app/components/resources-page/resources-page.scss
+++ b/app/components/resources-page/resources-page.scss
@@ -1,7 +1,6 @@
 .resources-page {
   position: relative;
   background: #E7E7E7;
-  height: 100%;
 }
 
 .resources-page__content {
